--- a/css/edoardo-ceriani.webflow.css
+++ b/css/edoardo-ceriani.webflow.css
@@ -575,6 +575,12 @@ a {
   background-size: cover;
 }
 
+.slide-11 {
+  background-image: url('../images/IMG_4677.jpeg');
+  background-position: 50%;
+  background-size: cover;
+}
+
 @media screen and (max-width: 991px) {
   .text-block.evideziato {
     font-size: 4em;
