--- a/css/edoardo-ceriani.webflow.css
+++ b/css/edoardo-ceriani.webflow.css
@@ -31,6 +31,9 @@ a {
   color: var(--not-pure-black);
   text-decoration: none;
 }
+.link1{
+  text-decoration: underline 2px black;
+}
 
 .text-block {
   color: var(--black);
